Disable escaping of external content when simply stripping tags (prevents double-encoding of HTML entities).

--- a/motion/templates/assets/bits/content.html
+++ b/motion/templates/assets/bits/content.html
@@ -10,7 +10,7 @@
     {% endif %}
 {% else %}
     {% if entry.source %}
-        {% withblock %}{{ entry.content|striptags }}{% as content %}
+        {% withblock %}{% autoescape off %}{{ entry.content|striptags }}{% endautoescape %}{% as content %}
         {{ content|truncatewords:settings.paragraph_wordcount }}
         {{ entry|morelink:settings.paragraph_wordcount }}
         {% endwithblock %}
