--- a/motion/templates/assets/body/base.html
+++ b/motion/templates/assets/body/base.html
@@ -4,7 +4,7 @@
 
 {% block title %}{% if entry.title %}<h2><a href="{{ entry.get_absolute_url }}">{% spaceless %}
     {% if entry.source %}
-        {{ entry.title|striptags }}
+        {% autoescape off %}{{ entry.title|striptags }}{% endautoescape %}
     {% else %}
         {{ entry.title }}
     {% endif %}
