--- a/motion/templates/assets/body/video.html
+++ b/motion/templates/assets/body/video.html
@@ -1,7 +1,7 @@
 {% extends "assets/body/base.html" %}
 
 {% block media %}
-<div>
+<div class="embed">
     {% autoescape off %}{{ entry.html }}{% endautoescape %}
 </div>
 {% endblock %}
