Changed "Edit my TypePad profile" link to go to the editing page in TypePad.

--- a/motion/templates/member.html
+++ b/motion/templates/member.html
@@ -57,7 +57,11 @@
             {% endif %}
 
             <li><img src="{{ settings.media_url }}motion/images/services/typepad.png" height="16" width="16" alt="TypePad" />&nbsp;
-                <a href="{{ member.typepad_url }}" rel="me" target="_blank">{% if is_self %}{% trans "Edit my TypePad profile" %}{% else %}{% trans "View full TypePad profile" %}{% endif %}</a>
+                {% if is_self %}
+                <a href="{{ member.typepad_edit_url }}" rel="me" target="_blank">{% trans "Edit my TypePad profile" %}</a>
+                {% else %}
+                <a href="{{ member.typepad_url }}" rel="me" target="_blank">{% trans "View full TypePad profile" %}</a>
+                {% endif %}
             </li>
 
             </ul>
