Flag for top/bottom pagination.

--- a/motion/templates/bits/event_list.html
+++ b/motion/templates/bits/event_list.html
@@ -1,5 +1,7 @@
 {% if page_obj.previous_link %}
+{% with "top" as position %}
 {% include "bits/pagination.html" %}
+{% endwith %}
 {% endif %}
 
 <ul>
