Hide admin options when none are available; restyled widget a bit.

--- a/motion/static/theme/style.css
+++ b/motion/static/theme/style.css
@@ -13,7 +13,7 @@
 
 @import url(../../typepadapp/css/reset.css);
 
-/* Default Styles ---------------------------------------------------------------------------------- */
+/* Default Styles --------------------------------------------------------- */
 
 body {
     font-size: 62.5%;
@@ -76,7 +76,7 @@ p {
     display: none;
 }
 
-/* Userpics ---------------------------------------------------------------------------------- */
+/* Userpics --------------------------------------------------------------- */
 
 .userpic {
     position: relative;
@@ -123,7 +123,7 @@ p {
     margin-bottom: 3px;
 }
 
-/* Layout ---------------------------------------------------------------------------------- */
+/* Layout ----------------------------------------------------------------- */
 
 #container {
     margin-left: auto;
@@ -177,7 +177,7 @@ p {
     font-size: 1.1em;
 }
 
-/* Header ---------------------------------------------------------------------------------- */
+/* Header ----------------------------------------------------------------- */
 
 #header {
     margin: 0 auto;
@@ -214,7 +214,7 @@ p {
     vertical-align: bottom;
 }
 
-/* Authentication ---------------------------------------------------------------------------------- */
+/* Authentication --------------------------------------------------------- */
 
 #header .widget-sign-in {
     float: right;
@@ -235,7 +235,7 @@ p {
     color: #fff;
 }
 
-/* Navigation ---------------------------------------------------------------------------------- */
+/* Navigation ------------------------------------------------------------- */
 
 #nav {
     width: 100%;
@@ -295,7 +295,7 @@ p {
     padding: 10px 20px 40px 20px;
 }
 
-/* Search ---------------------------------------------------------------------------------- */
+/* Search ----------------------------------------------------------------- */
 
 #nav .widget-search {
     position: absolute;
@@ -325,7 +325,7 @@ p {
     vertical-align: middle;
 }
 
-/* Footer ---------------------------------------------------------------------------------- */
+/* Footer ----------------------------------------------------------------- */
 
 #footer-inner {
     margin: 0 auto;
@@ -349,7 +349,7 @@ p {
     margin-right: 0;
 }
 
-/* Main Index ---------------------------------------------------------------------------------- */
+/* Main Index ------------------------------------------------------------- */
 
 #authenticate {
     /*display: none;*/
@@ -688,7 +688,7 @@ body.error {
     font-size: 12px;
 }
 
-/* Entry Listing ---------------------------------------------------------------------------------- */
+/* Entry Listing ---------------------------------------------------------- */
 
 
 #alpha .userpic .userpic-link {
@@ -698,7 +698,7 @@ body.error {
     float: left;
 }
 
-/* Actions Listing ---------------------------------------------------------------------------------- */
+/* Actions Listing -------------------------------------------------------- */
 
 /* entry type tab sprites */
 .asset .icon {
@@ -1070,14 +1070,14 @@ button.button-delete {
     padding: 0;
 }
 
-/* Pages ---------------------------------------------------------------------------------- */
+/* Pages ------------------------------------------------------------------ */
 
 .page-asset .asset-content {
     line-height: 1.5;
     margin-bottom: 20px;
 }
 
-/* Sidebar ---------------------------------------------------------------------------------- */
+/* Sidebar ---------------------------------------------------------------- */
 
 #beta .widget .summary {
     display: none;
@@ -1107,12 +1107,25 @@ button.button-delete {
 #beta .widget-following.empty {
     display: none;
 }
-#beta .admin-options {
-    padding: 10px;
+
+/* Admin options ---------------------------------------------------------- */
+
+#beta .widget-admin-options h3 {
+    font-size: small;
+}
+#beta .widget-admin-options {
+    padding: 5px;
     margin-bottom: 10px;
     border: 1px solid #DDDDDD;
     background-color: #F6F6F2;
 }
+#beta .widget-admin-options {
+    display: none;
+}
+#beta .widget-admin-options.display {
+    display: block;
+}
+
 .widget-gallery .widget-content h3 {
     display: none;
 }
@@ -1240,7 +1253,7 @@ button.button-delete {
 .widget-tag-cloud .rank-9  { font-size: 0.95em; }
 .widget-tag-cloud .rank-10 { font-size: 0.9em; }
 
-/* Archives ---------------------------------------------------------------------------------- */
+/* Archives --------------------------------------------------------------- */
 
 .action-listing {
     margin: 0 0 15px 0;
@@ -1300,7 +1313,7 @@ button.button-delete {
     width: 100%;
 }
 
-/* Comments ---------------------------------------------------------------------------------- */
+/* Comments --------------------------------------------------------------- */
 
 .trackbacks,
 .comments, 
@@ -1379,7 +1392,7 @@ button.button-delete {
     display: none; /* hide the sign-in icon */
 }
 
-/* Comment Form ---------------------------------------------------------------------------------- */
+/* Comment Form ----------------------------------------------------------- */
 
 .comments-open-content {
 /*    margin: 0 35px;*/
@@ -1426,7 +1439,7 @@ button.button-delete {
     display: inline;
 }
 
-/* Members ---------------------------------------------------------------------------------- */
+/* Members ---------------------------------------------------------------- */
 
 .featured-member .actions h2,
 .user-profile .actions h2,
@@ -1479,7 +1492,7 @@ button.button-delete {
     white-space: nowrap;
 }
 
-/* Profile ---------------------------------------------------------------------------------- */
+/* Profile ---------------------------------------------------------------- */
 
 .user-profile #page-title {
     border-bottom: 1px dotted #ddd;
@@ -1520,7 +1533,7 @@ button.button-delete {
     padding: 6px 0 0;
 }
 
-/* Sign in ---------------------------------------------------------------------------------- */
+/* Sign in ---------------------------------------------------------------- */
 
 .signin #alpha {
     width: 940px;
@@ -1562,7 +1575,7 @@ button.button-delete {
     margin-bottom: 20px;
 }
 
-/* Utility ---------------------------------------------------------------------------------- */
+/* Utility ---------------------------------------------------------------- */
 
 .default-value { color: #aaa; }
 
@@ -1634,7 +1647,7 @@ button.button-delete {
 }
 /* */
 
-/* Forms ---------------------------------------------------------------------------------- */
+/* Forms ------------------------------------------------------------------ */
 
 
 .user-profile-edit form {
@@ -1706,7 +1719,7 @@ ul.profile-data li .edit {
     margin-top: 15px;
 }
 
-/* Status Messages -------------------------------------------------------------------------------- */
+/* Status Messages -------------------------------------------------------- */
 
 #comment-exclamation,
 #comment-error {
