No more titles! Added a setting for allowing a title for custom sites.

--- a/motion/templates/assets/body/link.html
+++ b/motion/templates/assets/body/link.html
@@ -1,5 +1,9 @@
 {% extends 'assets/body/base.html' %}
 {% load generic_filters %}
 
-{% block title %}<h2><a href="{{ entry.link }}">{{ entry.link_title|truncatechars:35 }}</a></h2>{% endblock %}
-{% block content %}{{ entry.content|urlize|linebreaksbr }}{% endblock %}
+{% block content %}
+    {% if not settings.use_title %}
+    <h2><a href="{{ entry.link }}">{{ entry.link|truncatechars:35 }}</a></h2>
+    {% endif %}
+    {{ block.super }}
+{% endblock %}
