--- a/motion/templates/assets/body/base.html
+++ b/motion/templates/assets/body/base.html
@@ -2,13 +2,15 @@
 {% load generic_filters %}
 {% load typepad_filters %}
 
-{% block title %}{% if entry.title %}<h2><a href="{{ entry.get_absolute_url }}">{% spaceless %}
-    {% if entry.source %}
-        {% autoescape off %}{{ entry.title|striptags }}{% endautoescape %}
-    {% else %}
-        {{ entry.title }}
-    {% endif %}
-{% endspaceless %}</a></h2>{% endif %}{% endblock %}
+{% if settings.use_title %}
+    {% block title %}{% if entry.title %}<h2><a href="{{ entry.get_absolute_url }}">{% spaceless %}
+        {% if entry.source %}
+            {% autoescape off %}{{ entry.title|striptags }}{% endautoescape %}
+        {% else %}
+            {{ entry.title }}
+        {% endif %}
+    {% endspaceless %}</a></h2>{% endif %}{% endblock %}
+{% endif %}
 
 {% block media %}{% endblock %}
 {% block activity %}{% endblock %}
