--- a/motion/templates/assets/body/link.html
+++ b/motion/templates/assets/body/link.html
@@ -2,7 +2,7 @@
 {% load generic_filters %}
 
 {% block content %}
-    {% if not settings.use_title %}
+    {% if not settings.use_titles %}
     <h2><a href="{{ entry.link }}">{{ entry.link|truncatechars:35 }}</a></h2>
     {% endif %}
     {{ block.super }}
