--- a/motion/templates/banners/footer.html
+++ b/motion/templates/banners/footer.html
@@ -1,8 +1,16 @@
+{% load i18n %}
 <div id="footer">
     <div id="footer-inner">
         <div id="footer-content">
-            {% include "widgets/about_site.html" %}
-            {% include "widgets/powered_by.html" %}
+            {% if user.is_authenticated %}
+            <div><a href="{{ user.typepad_membership_management_url }}">{% trans "Manage your TypePad Motion memberships" %}</a></div>
+            {% endif %}
+            <div>
+                <a href="{% url terms %}">{% trans "Terms of Service" %}</a>
+                <span class="separator">&bull;</span>
+                <a href="{% url privacy %}">{% trans "Privacy" %}</a>
+            </div>
+            {% trans "Copyright &copy; 2009 Six Apart Ltd. All rights reserved." %}
         </div>
     </div>
 </div>
