--- a/motion/templates/widgets/followers.html
+++ b/motion/templates/widgets/followers.html
@@ -24,7 +24,7 @@ Template used for displaying a list of the users followers.
             {% for rel in followers %}
             {% with rel.target as member %}
             {% with 32 as photo_size %}
-            {% include "bits/list_member.html" %}
+            {% include "bits/member_widget_item.html" %}
             {% endwith %}
             {% endwith %}
             {% endfor %}
