--- a/motion/templates/widgets/following.html
+++ b/motion/templates/widgets/following.html
@@ -16,7 +16,7 @@
             {% for rel in following %}
             {% with rel.target as member %}
             {% with 32 as photo_size %}
-            {% include "bits/list_member.html" %}
+            {% include "bits/member_widget_item.html" %}
             {% endwith %}
             {% endwith %}
             {% endfor %}
